--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
   <div id="page-info" class="small"></div>
   <button id="next" class="ghost">Next</button>
 </div></main> <div id="modal" role="dialog" aria-hidden="true"> <div class="box"> <button id="close-modal" class="ghost" style="float:right">Close</button> <div id="modal-content"></div> </div> </div> <!-- PapaParse for client-side CSV parsing --> <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script> 
-<script src="app.js"></script></body> </html>
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script> <script src="app.js"></script>
