--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <select id="sort"><option value="title">Sort: Title</option><option value="type">Sort: Type</option><option value="release_date">Sort: Release Date</option></select>
 
 </div>
+  <div id="list" class="grid"></div>
 
 <div class="pager">
   <button id="prev" class="ghost">Prev</button>
