--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<!doctype html> <html lang="zh-CN"> <head> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width,initial-scale=1" /> <title>HSS-IKO!</title><style>/* Heart wishlist button /
+<!doctype html> <html lang="zh-CN"> /* Footer matching header style */
+.site-footer {
+background:#111827;
+color:#fff;
+padding:12px 16px;
+margin-top:18px;
+}
+.site-footer a { color: inherit; text-decoration: underline; }<head> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width,initial-scale=1" /> <title>HSS-IKO!</title><style>/* Heart wishlist button /
 .wishlist-toggle {
 display:inline-flex;
 align-items:center;
@@ -220,4 +227,4 @@ button.wishlist-toggle:focus { outline: 3px solid rgba(37,99,235,0.12); outline-
   <button id="prev" onclick="goPage(-1)">Prev</button>
   <div id="page-info" class="small"></div>
   <button id="next" onclick="goPage(1)">Next</button>
-</div></main> <div id="modal" role="dialog" aria-hidden="true"> <div class="box"> <button id="close-modal" class="ghost" style="float:right">Close</button> <div id="modal-content"></div> </div> </div> <!-- PapaParse for client-side CSV parsing --> <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script> <script src="app.js"></script>
+</div></main><footer class="site-footer"> <div class="container" style="display:flex;align-items:center;justify-content:center"> <div style="font-size:16px;margin:6px 0"> <a href="mailto:laios9@yahoo.com" id="contact-email" style="color:inherit;text-decoration:underline">laios9@yahoo.com</a> </div> </div> </footer> <div id="modal" role="dialog" aria-hidden="true"> <div class="box"> <button id="close-modal" class="ghost" style="float:right">Close</button> <div id="modal-content"></div> </div> </div> <!-- PapaParse for client-side CSV parsing --> <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script> <script src="app.js"></script>
