--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!doctype html> <html lang="zh-CN"> /* Footer matching header style */
-.site-footer {
+<!doctype html> <html lang="zh-CN"> <head> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width,initial-scale=1" /> .site-footer {
 background:#111827;
 color:#fff;
 padding:12px 16px;
 margin-top:18px;
 }
-.site-footer a { color: inherit; text-decoration: underline; }<head> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width,initial-scale=1" /> <title>HSS-IKO!</title><style>/* Heart wishlist button /
+.site-footer a { color: inherit; text-decoration: underline; }<title>HSS-IKO!</title><style>/* Heart wishlist button /
 .wishlist-toggle {
 display:inline-flex;
 align-items:center;
