--- a/index.html
+++ b/index.html
@@ -1,258 +1,4 @@
-<!doctype html> <html lang="zh-CN"> <head> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width,initial-scale=1" /><title>HSS-IKO!</title><style>/* Heart wishlist button /
-.wishlist-toggle {
-display:inline-flex;
-align-items:center;
-justify-content:center;
-width:36px;
-height:36px;
-padding:6px;
-border-radius:8px;
-border:0;
-background:transparent;
-cursor:pointer;
-transition: transform .12s ease;
-}button.wishlist-toggle svg {
-width: 20px;
-height: 20px;
-display: block;
-}
-button.wishlist-toggle svg .heart-shape {
-fill: none !important;
-stroke: #666 !important;
-stroke-width: 1.6;
-stroke-linecap: round;
-stroke-linejoin: round;
-vector-effect: non-scaling-stroke; /* keeps stroke thickness consistent */
-transition: fill .18s ease, stroke .12s ease, transform .12s ease;
-}
-button.wishlist-toggle.in svg .heart-shape {
-fill: #ff6b6b !important;
-stroke: #ff6b6b !important;
-}
-button.wishlist-toggle:hover svg .heart-shape,
-button.wishlist-toggle:focus svg .heart-shape {
-stroke: #2563eb !important;
-transform: scale(1.06);
-}
-.wishlist-toggle svg { width:20px; height:20px; display:block; }
-/ outline: stroke visible, no fill /
-.wishlist-toggle svg .heart-shape { fill: none; stroke: #666; stroke-width:1.6; transition: fill .18s ease, stroke .12s ease, transform .12s ease; }
-/ hovered outline emphasis /
-.wishlist-toggle:hover svg .heart-shape { stroke: #2563eb; transform: scale(1.05); }
-/ when in wishlist: filled red /
-.wishlist-toggle.in svg .heart-shape { fill: #ff6b6b; stroke: #ff6b6b; }
-/ slight pop animation when toggled (via class .pop briefly) /
-.wishlist-toggle.pop { transform: scale(1.08); transition: transform .16s ease; }
-/ accessible visually-hidden helper (optional) */
-.visually-hidden { position:absolute !important; height:1px; width:1px; overflow:hidden; clip:rect(1px,1px,1px,1px); white-space:nowrap; }
-
- /* Multi-filter: compact summary + hidden tools until hover/focus for a clean desktop look */
-.multi-filter {
-padding: 6px;
-background: #fff;
-border-radius: 6px;
-border: 1px solid #eee;
-position: relative;
-}
-
-/* summary box (title left, chevron right) — compact and consistent across sizes */
-.multi-filter .summary {
-display: flex;
-justify-content: space-between;
-align-items: center;
-gap: 8px;
-padding: 8px 10px;
-background: #fff;
-border-radius: 6px;
-border: 1px solid transparent;
-cursor: pointer;
-margin-bottom: 8px;
-font-size: 13px;
-color: #222;
-}
-
-/* chevron button styling — smaller, subtle */
-.multi-filter .summary .chev {
-font-size: 13px;
-padding: 6px 8px;
-border-radius: 6px;
-border: 0;
-background: #2563eb;
-color: #fff;
-line-height: 1;
-min-width: 34px;
-display: inline-flex;
-align-items: center;
-justify-content: center;
-}
-
-/* tools row (Select all / Clear) is hidden by default on larger screens to reduce clutter.
-It will reveal when the filter is hovered or receives focus. */
-.multi-filter .controls {
-display: flex;
-gap: 6px;
-margin-bottom: 6px;
-transition: max-height .18s ease, opacity .18s ease;
-max-height: 0;
-overflow: hidden;
-opacity: 0;
-pointer-events: none;
-}
-
-/* show tools on hover / focus-within / when explicitly expanded */
-.multi-filter:hover .controls,
-.multi-filter:focus-within .controls,
-.multi-filter.expanded .controls {
-max-height: 200px;
-opacity: 1;
-pointer-events: auto;
-}
-
-/* ensure the check list inside filter can scroll if large */
-.multi-filter .multi-filter-list { max-height: 220px; overflow: auto; }
-
-/* preserve the collapsed mobile behavior when .collapsed is present (JS toggles this) */
-.multi-filter.collapsed .controls,
-.multi-filter.collapsed .multi-filter-list {
-display: none;
-}
-
-/* tweak spacing so summary and list don't feel cramped */
-.multi-filter label { margin: 4px 0; font-size: 13px; } body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;padding:0;color:#222;background:#f7f7f8} header{background:#111827;color:#fff;padding:12px 16px} .container{max-width:1100px;margin:18px auto;padding:0 16px} .controls{display:flex;flex-wrap:wrap;gap:8px;margin-bottom:12px} select,input[type="search"]{padding:8px;border:1px solid #ddd;border-radius:6px} .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:12px} .card{background:#fff;border:1px solid #e6e6e6;border-radius:8px;overflow:hidden;display:flex;flex-direction:column;min-height:280px} .thumb{width:100%;height:200px;object-fit:cover;background:#f6f6f6} .card-body{padding:8px;flex:1;display:flex;flex-direction:column} .meta {
-font-size: 13px;
-color: #555;
-margin-top: 6px;
-margin-bottom: 10px; /* <-- added space below the type */
-}
-/* Wishlist modal button tweaks /
-#modal .box .details-btn {
-padding: 6px 10px;
-border-radius: 6px;
-border: 0;
-background: #2563eb;
-color: #fff;
-cursor: pointer;
-margin-right: 8px;
-}
-#modal .box .remove-btn {
-padding: 6px 10px;
-border-radius: 6px;
-background: transparent;
-color: #ef4444;              / red text /
-border: 1px solid #ef4444;   / red outline /
-cursor: pointer;
-}
-#modal .box .remove-btn:hover {
-background: #fee2e2; / pale red */
-}
-#modal .box #download-wishlist {
-padding: 8px 12px;
-border-radius: 6px;
-background: #2563eb;
-color: #fff;
-border: 0;
-cursor: pointer;
-}
-#modal .box button { font-size: 14px; }
-.buttons {
-display: flex;
-gap: 10px;        /* slightly larger horizontal gap between buttons */
-margin-top: auto;
-align-items: center;
-} /* primary button */ button{padding:6px 8px;border-radius:6px;border:0;background:#2563eb;color:#fff;cursor:pointer} /* ghost style */ button.ghost{background:#f3f4f6;color:#111;border:1px solid #ddd} /* disabled appearance for buttons */ button:disabled, button[disabled] { opacity: 0.55; cursor: not-allowed; background: #cfcfcf; color: #666; box-shadow: none; } /* modal and misc */ #wishlist-note { font-size:13px; color:#666; } #modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;padding:18px;z-index:40} #modal .box{background:#fff;padding:18px;border-radius:8px;max-width:920px;width:100%;max-height:85vh;overflow:auto} .row{display:flex;gap:8px;flex-wrap:wrap} .small{font-size:13px;color:#666} .pager{display:flex;gap:8px;align-items:center;justify-content:center;margin:14px 0} .wishlist-btn{background:#ff6b6b} .topbar{display:flex;gap:8px;align-items:center} .badge{background:#efefef;padding:6px 8px;border-radius:6px;font-size:13px;color:#333} /* Mobile-specific layout tweaks and filter collapsed styling */ @media (max-width: 600px)/* two-up card layout on phones; single column on very tiny screens */
-@media (max-width: 600px) {
-.grid {
-grid-template-columns: repeat(2, minmax(0, 1fr));
-gap: 10px;
-}
-
-/* relax fixed min-height so cards size to content */
-.card {
-min-height: unset;
-}
-
-/* use aspect-ratio instead of fixed height so images remain large and consistent /
-.thumb {
-width: 100%;
-height: auto;
-aspect-ratio: 4 / 3;   / choose 1/1, 4/3 or 16/9 depending on your images /
-object-fit: cover;     / ensure images crop nicely */
-display: block;
-background: #f6f6f6;
-}
-
-/* slightly smaller gaps/padding on mobile to make two-up comfortable */
-.container { padding-left: 12px; padding-right: 12px; }
-.card-body { padding: 8px; }
-.meta { font-size: 13px; }
-
-/* preserve tappable target sizes */
-.buttons button { padding: 10px 12px; font-size: 15px; border-radius: 8px; }
-}
-
-/* very small phones (e.g. very narrow devices) — revert to one column to avoid cramped layout */
-@media (max-width: 340px) {
-.grid { grid-template-columns: 1fr; }
-} { /* Make filter panels full-width and compact */ .controls { gap: 6px; } .multi-filter { min-width: unset; max-width: 100%; padding: 6px; margin-bottom: 8px; } /* Collapsed state: hide tools and list (JS will toggle .collapsed) */ .multi-filter.collapsed .controls, .multi-filter.collapsed .multi-filter-list { display: none; } /* Summary header (visible on mobile) */ .multi-filter .summary { display: flex; justify-content: space-between; align-items: center; gap: 8px; padding: 8px; background: #fff; border-radius: 6px; border: 1px solid #eee; cursor: pointer; margin-bottom: 6px; } .multi-filter .summary .label { font-weight: 600; font-size: 14px; color: #222; } .multi-filter .summary .chev { font-size: 14px; background: transparent; border: 0; cursor: pointer; color: #2563eb; } /* ensure the check list inside filter can scroll if large */ .multi-filter .multi-filter-list { max-height: 180px; overflow: auto; } /* Smaller card previews */ .card { min-height: 220px; } .thumb { height: 140px; } /* Bigger touch targets for buttons */ .buttons button { padding: 12px 14px; font-size: 16px; border-radius: 8px; } /* Increase modal contents readability on small screens */ #modal .box { padding: 16px; width: 100%; max-width: 720px; margin: 0 12px; } #modal .box img { max-width: 100%; height: auto; } /* Make meta text a bit larger for readability */ .meta { font-size: 14px; } } /* small-screen fallback for thumb if not captured above */ @media (max-width: 600px) { .thumb { height: 140px; } } /* Heart wishlist button — stronger / last rules so generic button styles don't override */
-button.wishlist-toggle {
-background: transparent !important;
-border: 0 !important;
-padding: 6px !important;
-width: 36px;
-height: 36px;
-border-radius: 8px;
-display: inline-flex;
-align-items: center;
-justify-content: center;
-cursor: pointer;
-transition: transform .12s ease;
-}
-
-/* SVG sizing & visibility */
-button.wishlist-toggle svg {
-width: 20px;
-height: 20px;
-display: block;
-}
-
-/* heart path visuals */
-button.wishlist-toggle svg .heart-shape {
-fill: none !important;
-stroke: #666 !important;
-stroke-width: 1.6;
-stroke-linecap: round;
-stroke-linejoin: round;
-transition: fill .18s ease, stroke .12s ease, transform .12s ease;
-}
-
-/* hover/focus state */
-button.wishlist-toggle:hover svg .heart-shape,
-button.wishlist-toggle:focus svg .heart-shape {
-stroke: #2563eb !important;
-transform: scale(1.05);
-}
-
-/* when in wishlist: filled red */
-button.wishlist-toggle.in svg .heart-shape {
-fill: #ff6b6b !important;
-stroke: #ff6b6b !important;
-}
-
-/* small pop animation */
-button.wishlist-toggle.pop { transform: scale(1.08); transition: transform .16s ease; }
-
-/* ensure the button is keyboard-focus-visible */
-button.wishlist-toggle:focus { outline: 3px solid rgba(37,99,235,0.12); outline-offset: 2px; }
- /* Footer matching header style */
-.site-footer {
-  background:#111827;
-  color:#fff;
-  padding:12px 16px;
-  margin-top:18px;
-}
-.site-footer a { color: inherit; text-decoration: underline; }
-
-</style> </head> <body> <header> <div class="container"> <div style="display:flex;align-items:center;justify-content:space-between"> <h1 style="margin:0;font-size:20px">和山山 IKO!</h1> <div class="topbar"> <button id="open-wishlist" class="ghost">心愿单</button> <button id="export-wishlist" class="ghost">导出心愿单</button></div> </div> </div> </header> <main class="container"> <div class="controls"> <input id="search" type="search" placeholder="输入关键词搜索" style="flex:1" /><!-- multi-select checkbox containers (works, characters, images) --> <div id="filter-type-container" class="multi-filter" aria-label="类型"></div> <div id="filter-work-container" class="multi-filter" aria-label="作品"></div> <div id="filter-character-container" class="multi-filter" aria-label="人物"></div> <div id="filter-image-container" class="multi-filter" aria-label="柄图"></div>
+<!doctype html> <html lang="zh-CN"> <head> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width,initial-scale=1" /><title>HSS-IKO!</title><style> /* Heart wishlist button */ button.wishlist-toggle { display: inline-flex; align-items: center; justify-content: center; width: 36px; height: 36px; padding: 6px; border-radius: 8px; border: 0; background: transparent; cursor: pointer; transition: transform .12s ease; } button.wishlist-toggle svg { width: 20px; height: 20px; display: block; } button.wishlist-toggle svg .heart-shape { fill: none !important; stroke: #666 !important; stroke-width: 1.6; stroke-linecap: round; stroke-linejoin: round; vector-effect: non-scaling-stroke; /* keeps stroke thickness consistent */ transition: fill .18s ease, stroke .12s ease, transform .12s ease; } button.wishlist-toggle.in svg .heart-shape { fill: #ff6b6b !important; stroke: #ff6b6b !important; } button.wishlist-toggle:hover svg .heart-shape, button.wishlist-toggle:focus svg .heart-shape { stroke: #2563eb !important; transform: scale(1.06); } button.wishlist-toggle.pop { transform: scale(1.08); transition: transform .16s ease; } button.wishlist-toggle:focus { outline: 3px solid rgba(37,99,235,0.12); outline-offset: 2px; } /* accessible visually-hidden helper */ .visually-hidden { position: absolute !important; height: 1px; width: 1px; overflow: hidden; clip: rect(1px,1px,1px,1px); white-space: nowrap; } /* Multi-filter */ .multi-filter { padding: 6px; background: #fff; border-radius: 6px; border: 1px solid #eee; position: relative; } .multi-filter .summary { display: flex; justify-content: space-between; align-items: center; gap: 8px; padding: 8px 10px; background: #fff; border-radius: 6px; border: 1px solid transparent; cursor: pointer; margin-bottom: 8px; font-size: 13px; color: #222; } .multi-filter .summary .chev { font-size: 13px; padding: 6px 8px; border-radius: 6px; border: 0; background: #2563eb; color: #fff; line-height: 1; min-width: 34px; display: inline-flex; align-items: center; justify-content: center; } .multi-filter .controls { display: flex; gap: 6px; margin-bottom: 6px; transition: max-height .18s ease, opacity .18s ease; max-height: 0; overflow: hidden; opacity: 0; pointer-events: none; } .multi-filter:hover .controls, .multi-filter:focus-within .controls, .multi-filter.expanded .controls { max-height: 200px; opacity: 1; pointer-events: auto; } .multi-filter .multi-filter-list { max-height: 220px; overflow: auto; } .multi-filter.collapsed .controls, .multi-filter.collapsed .multi-filter-list { display: none; } .multi-filter label { margin: 4px 0; font-size: 13px; } /* Base layout & components */ body { font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; color: #222; background: #f7f7f8; } header { background: #111827; color: #fff; padding: 12px 16px; } .container { max-width: 1100px; margin: 18px auto; padding: 0 16px; } .controls { display: flex; flex-wrap: wrap; gap: 8px; margin-bottom: 12px; } select, input[type="search"] { padding: 8px; border: 1px solid #ddd; border-radius: 6px; } /* Grid and cards */ .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); gap: 12px; } .card { background: #fff; border: 1px solid #e6e6e6; border-radius: 8px; overflow: hidden; display: flex; flex-direction: column; min-height: 280px; } .thumb { width: 100%; height: 200px; /* fallback for older browsers */ object-fit: cover; background: #f6f6f6; display: block; } .card-body { padding: 8px; flex: 1; display: flex; flex-direction: column; } .meta { font-size: 13px; color: #555; margin-top: 6px; margin-bottom: 10px; } /* Modal & buttons */ #modal .box .details-btn { padding: 6px 10px; border-radius: 6px; border: 0; background: #2563eb; color: #fff; cursor: pointer; margin-right: 8px; } #modal .box .remove-btn { padding: 6px 10px; border-radius: 6px; background: transparent; color: #ef4444; border: 1px solid #ef4444; cursor: pointer; } #modal .box .remove-btn:hover { background: #fee2e2; } #modal .box #download-wishlist { padding: 8px 12px; border-radius: 6px; background: #2563eb; color: #fff; border: 0; cursor: pointer; } #modal .box button { font-size: 14px; } .buttons { display: flex; gap: 10px; margin-top: auto; align-items: center; } button { padding: 6px 8px; border-radius: 6px; border: 0; background: #2563eb; color: #fff; cursor: pointer; } button.ghost { background: #f3f4f6; color: #111; border: 1px solid #ddd; } button:disabled, button[disabled] { opacity: 0.55; cursor: not-allowed; background: #cfcfcf; color: #666; box-shadow: none; } #wishlist-note { font-size: 13px; color: #666; } #modal { position: fixed; inset: 0; background: rgba(0,0,0,.5); display: none; align-items: center; justify-content: center; padding: 18px; z-index: 40; } #modal .box { background: #fff; padding: 18px; border-radius: 8px; max-width: 920px; width: 100%; max-height: 85vh; overflow: auto; } .row { display: flex; gap: 8px; flex-wrap: wrap; } .small { font-size: 13px; color: #666; } .pager { display: flex; gap: 8px; align-items: center; justify-content: center; margin: 14px 0; } .wishlist-btn { background: #ff6b6b; } .topbar { display: flex; gap: 8px; align-items: center; } .badge { background: #efefef; padding: 6px 8px; border-radius: 6px; font-size: 13px; color: #333; } /* Footer */ .site-footer { background: #111827; color: #fff; padding: 12px 16px; margin-top: 18px; } .site-footer a { color: inherit; text-decoration: underline; } /* MOBILE OVERRIDES: two-up layout on phones */ @media (max-width: 600px) { /* force two flexible columns on phones */ .grid { grid-template-columns: repeat(2, minmax(0, 1fr)); gap: 10px; } /* let cards size to content */ .card { min-height: unset; } /* prefer aspect-ratio where supported for consistent image size */ .thumb { height: auto; aspect-ratio: 4 / 3; /* change to 1/1 for square thumbnails if you prefer */ object-fit: cover; } /* small spacing tweaks */ .container { padding-left: 12px; padding-right: 12px; } .card-body { padding: 8px; } .meta { font-size: 13px; } /* preserve tappable target sizes */ .buttons button { padding: 10px 12px; font-size: 15px; border-radius: 8px; } } /* very small phones: revert to single column to avoid cramped layout */ @media (max-width: 340px) { .grid { grid-template-columns: 1fr; } } /* additional mobile niceties for filters */ @media (max-width: 600px) { .controls { gap: 6px; } .multi-filter { min-width: unset; max-width: 100%; padding: 6px; margin-bottom: 8px; } .multi-filter.collapsed .controls, .multi-filter.collapsed .multi-filter-list { display: none; } .multi-filter .summary { display: flex; justify-content: space-between; align-items: center; gap: 8px; padding: 8px; background: #fff; border-radius: 6px; border: 1px solid #eee; cursor: pointer; margin-bottom: 6px; } .multi-filter .summary .label { font-weight: 600; font-size: 14px; color: #222; } .multi-filter .summary .chev { font-size: 14px; background: transparent; border: 0; cursor: pointer; color: #2563eb; } .multi-filter .multi-filter-list { max-height: 180px; overflow: auto; } .card { min-height: 220px; } .thumb { height: 140px; } .buttons button { padding: 12px 14px; font-size: 16px; border-radius: 8px; } #modal .box { padding: 16px; width: 100%; max-width: 720px; margin: 0 12px; } #modal .box img { max-width: 100%; height: auto; } .meta { font-size: 14px; } } </style> </head> <body> <header> <div class="container"> <div style="display:flex;align-items:center;justify-content:space-between"> <h1 style="margin:0;font-size:20px">和山山 IKO!</h1> <div class="topbar"> <button id="open-wishlist" class="ghost">心愿单</button> <button id="export-wishlist" class="ghost">导出心愿单</button></div> </div> </div> </header> <main class="container"> <div class="controls"> <input id="search" type="search" placeholder="输入关键词搜索" style="flex:1" /><!-- multi-select checkbox containers (works, characters, images) --> <div id="filter-type-container" class="multi-filter" aria-label="类型"></div> <div id="filter-work-container" class="multi-filter" aria-label="作品"></div> <div id="filter-character-container" class="multi-filter" aria-label="人物"></div> <div id="filter-image-container" class="multi-filter" aria-label="柄图"></div>
 <select id="sort"><option value="title">排序：名称 A-Z</option><option value="type">排序：类型 A-Z</option><option value="release_date">排序：发行日期 最新-古早</option></select>
 
 </div>
